[tool.poetry]
name = "biosspheres"
version = "0.1.2.dev0"
description = "Python package to obtain Helmholtz or Laplace boundary integral operator on spheres using spherical harmonics. It also implements the Multiple Traces Formulation to solve scattering transmission problems in an ensemble of spheres."
authors = [
    {name = "Isabel Martínez, Carlos Jerez-Hanckes, Paul Escapil, Tobias Gebäck"}]
maintainers = [
    {name = "Biosspheres Developers", email="biosspheres@pm.me"},
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/iamartineza/biosspheres"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pyshtools = ">=4.10.4"
numpy = ">=1.26.4"
scipy = ">=1.11.4,<1.14.0"

# Extras
matplotlib = { version = ">=3.8", optional = true }
notebook = { version = ">=7.2.2", optional = true }
jupyterlab = { version = ">=3.0", optional = true }
ipython = { version = ">=7.0", optional = true }
ipykernel = { version = ">=6.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^8.3"
black = "^24.8"

[tool.poetry.extras]
plotting = ["matplotlib"]
jupyter = [
    "matplotlib",
    "notebook",
    "jupyterlab",
    "ipython",
    "ipykernel"
]
all = [
    "matplotlib",
    "notebook",
    "jupyterlab",
    "ipython",
    "ipykernel"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
